new styles for header and navbar added

--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
 			<nav>
 				<ul class="nav-list">
 					<li class="nav-list-item">
-						<h1 class="my-recipes"><a href="">My Recipes</a></h1>
+						<p class="nav-link-container"><a href="" class="nav-link">My Recipes</a></p>
 					</li>
 					<li class="nav-list-item">
-						<p class="add-recipe"><a href="">Add Recipe</a></p>
+						<p class="nav-link-container"><a href="" class="nav-link">Add Recipe</a></p>
 					</li>
 					<li class="nav-list-item">
-						<input type="text" name="search" class="search"/>
-						<input type="submit" />
+						<div>
+							<input type="text" name="search" class="search"/>
+							<input type="submit" />
+						</div>
 					</li>
 				</ul>
 			</nav>
 		</section>
-		<section class="latest-recipies">
-			<h1 class="latest-recipies-heading">Latest Recipes</h1>
+		<section class="latest-recipes">
+			<h1 class="latest-recipes-heading">Latest Recipes</h1>
 			<article class="recipe">
 				<h2 class="recipe-name"></h2>
 				<p class="recipe-category"></p>
