Updated data model to incorporate the entire recipe

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
 				<latest></latest>
 			</div>
 			<div class="slide inactive new">
+				<new></new>
+<!--
 				<ingrs></ingrs>
 				<direcs></direcs>
+-->
 			</div>
 			<div class="slide inactive cookbook">
 				<cookbook></cookbook>
